# mma_cuda

./: CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  cudaCommon.cuh  gpuVector.cpp  gpuVector.cuh  lib.cu  lib.cuh  mmaOpt.cu  mmaOpt.h  test_suits.cpp
matio/: .appveyor.yml  .cirrus.yml  .clang-format  CMakeLists.txt  COPYING  Makefile  Makefile.am  NEWS  README  README.md  cmake_install.cmake  configure.ac  coverity_model.c  libmatio.so.1.5.28  libmatio.so.13  matdump  matio.pc.in  test_mat  test_snprintf
matio/cmake/: compilerOptions.cmake  conan.cmake  getopt.cmake  matioConfig.cmake.in  matio_pubconf.cmake.in  options.cmake  src.cmake  staticAnalyzers.cmake  test.cmake  thirdParties.cmake  tools.cmake
matio/config/: config.guess  config.sub  matio_def_file_ver.m4  matio_getopt_long.m4  matio_hdf5.m4  matio_int16_t.m4  matio_int32_t.m4  matio_int64_t.m4  matio_int8_t.m4  matio_matlab.m4  matio_off64_t.m4  matio_uint16_t.m4  matio_uint32_t.m4  matio_uint64_t.m4  matio_uint8_t.m4  matio_va_copy.m4  matio_zlib.m4  pkg.m4
matio/documentation/: Makefile.am  Mat_Close.3  Mat_CreateVer.3  Mat_GetDir.3  Mat_GetFileAccessMode.3  Mat_GetFilename.3  Mat_GetHeader.3  Mat_GetLibraryVersion.3  Mat_GetVersion.3  Mat_Open.3  Mat_Rewind.3  Mat_VarAddStructField.3  Mat_VarCreate.3  Mat_VarCreateStruct.3  Mat_VarDelete.3  Mat_VarFree.3  Mat_VarGetNumberOfFields.3  Mat_VarGetSize.3  Mat_VarGetStructFieldnames.3  Mat_VarGetStructs.3  Mat_VarGetStructsLinear.3  Mat_VarPrint.3  Mat_VarRead.3  Mat_VarReadInfo.3  Mat_VarReadNext.3  Mat_VarReadNextInfo.3  Mat_VarWrite.3  Mat_VarWriteAppend.3  build.texi  intro.texi  matio_user_guide.texi  matvar_structure.texi  quick.texi
matio/getopt/: Makefile.am  getopt.h  getopt_long.c
matio/ossfuzz/: build.sh  fuzzer_temp_file.h  matio_fuzzer.cpp  matio_fuzzer.dict  matio_wrap.h
matio/snprintf/: Makefile.am  snprintf.c
matio/src/: Makefile.am  endian.c  inflate.c  io.c  mat.c  mat4.c  mat4.h  mat5.c  mat5.h  mat73.c  mat73.h  matio.h  matio.sym  matioConfig.h  matioConfig.h.in  matio_private.h  matio_pubconf.h  matio_pubconf.h.in  matvar_cell.c  matvar_struct.c  (+3 more)
(+144 files in other folders)
